--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "14.1.0",
     "@angular/router": "14.1.0",
     "bootstrap": "5.2.0",
+    "date-fns": "2.28.0",
     "font-awesome": "4.7.0",
     "rxjs": "7.5.6",
     "tslib": "2.4.0",
